# usim-service

./: .gitignore  CMakeLists.txt  README.md  app-eventlog-multi_record.v1.cddl  app-eventlog-record.v03-1.cddl  hash-message.cddl
config/: CMakeLists.txt  uiimd.yml  uismd.service
src/: CMakeLists.txt  distributor.c  distributor.h  hash_message_list_for_session.c  hash_message_list_for_session.h  hash_message_logger.c  hash_message_logger.h  hash_message_record.c  hash_message_record.h  help_functions.c  help_functions.h  log_viewer.c  log_viewer.h  record_list.c  record_list.h  service.c  service.h  session.c  session.h  session_helper.c  session_helper.h  uiim_service_typedefs.h  uiim_service_typedefs.h.in  uiim_service_typedefs_old.h  uiimconf.c  uiimconf.h  uiimcrypto.c  uiimcrypto.h  wf_session.c  wf_session.h  wheel_feeder.c  wheel_feeder.h
src/mtsl/: mtsl.c  mtsl.h
src/sts_queue/: sts_queue.c  sts_queue.h
src/util/: tpm2_util.c
tests/: hashmessagetest.c
