cmake_minimum_required(VERSION 3.10)

include(GNUInstallDirs)

install(FILES uiimd.yml DESTINATION ${CMAKE_INSTALL_FULL_SYSCONFDIR}/uismd RENAME conf.yml.example)
set(USIMCONF "${CMAKE_INSTALL_FULL_SYSCONFDIR}/uismd/conf.yml")
unset(SYSTEMCTL_RESULT CACHE)
execute_process(COMMAND "systemctl" "--version" TIMEOUT 3 RESULT_VARIABLE SYSTEMCTL_RESULT OUTPUT_QUIET ERROR_QUIET)
if(SYSTEMCTL_RESULT EQUAL 0)
set(SERVICEPATH "/etc/systemd/system")
file(WRITE uismd.service "[Unit]\n")
file(APPEND uismd.service "Description=Userspace Software Integrity Measurement Dameon\n")
file(APPEND uismd.service "#Requires=tpm2-abrmd.service\n")
file(APPEND uismd.service "#After=tpm2-abrmd.service\n")
file(APPEND uismd.service "[Service]\n")
file(APPEND uismd.service "Type=simple\n")
file(APPEND uismd.service "Restart=always\n")
file(APPEND uismd.service "RestartSec=5\n")
file(APPEND uismd.service "ExecStart=${CMAKE_INSTALL_FULL_BINDIR}/uiimd ${USIMCONF}\n")
file(APPEND uismd.service "[Install]\n")
file(APPEND uismd.service "WantedBy=multi-user.target\n")
install(FILES uismd.service DESTINATION ${SERVICEPATH})
endif()